# fb_post/interactors/storage_interfaces/dtos.py
@@ -34,3 +34,4 @@ class GetPostParametersDto:
     limit: int
     sortby: typing.Any
     filterby: str
+    sortby_order: str
