# fb_post/views/get_all_posts/api_wrapper.py
@@ -1,48 +1,0 @@
-from django_swagger_utils.drf_server.utils.decorator.interface_decorator \
-    import validate_decorator
-from .validator_class import ValidatorClass
-
-
-@validate_decorator(validator_class=ValidatorClass)
-def api_wrapper(*args, **kwargs):
-    # ---------MOCK IMPLEMENTATION---------
-
-    try:
-        from fb_post.views.get_all_posts.request_response_mocks \
-            import REQUEST_BODY_JSON
-        body = REQUEST_BODY_JSON
-    except ImportError:
-        body = {}
-
-    test_case = {
-        "path_params": {},
-        "query_params": {'offset': 186, 'limit': 936, 'filter': 'string', 'sortby': 'posted_at'},
-        "header_params": {},
-        "body": body,
-        "securities": []
-    }
-
-    from django_swagger_utils.drf_server.utils.server_gen.mock_response \
-        import mock_response
-    try:
-        response = ''
-        status_code = 200
-        if '200' in ['200']:
-            from fb_post.views.get_all_posts.request_response_mocks \
-                import RESPONSE_200_JSON
-            response = RESPONSE_200_JSON
-            status_code = 200
-        elif '201' in ['200']:
-            from fb_post.views.get_all_posts.request_response_mocks \
-                import RESPONSE_201_JSON
-            response = RESPONSE_201_JSON
-            status_code = 201
-    except ImportError:
-        response = ''
-        status_code = 200
-    response_tuple = mock_response(
-        app_name="fb_post", test_case=test_case,
-        operation_name="get_all_posts",
-        kwargs=kwargs, default_response_body=response,
-        group_name="", status_code=status_code)
-    return response_tuple
